--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-texto
-<HTML>
+<!DOCTYPE html>
+<html lang="en">
 
-</HTML>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Primera Pagina</title>
+</head>
+
+<body>
+</body>
+
+</html>
