agregue h1 segundo commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primera Pagina</title>
 </head>
+<h1>segundo comit</h1>
 
 <body>
 </body>
